bpo-38210: Fix intersection operation with dict view and iterator. (GH-16602)